// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiPopover children is rendered 1`] = `
<div
  class="euiPopover emotion-euiPopover-inline-block"
  id="1"
>
  <button />
</div>
`;

exports[`EuiPopover is rendered 1`] = `
<div
  class="euiPopover testClass1 testClass2 emotion-euiPopover-inline-block-euiTestCss"
  data-test-subj="test subject string"
  id="0"
>
  <button />
</div>
`;

exports[`EuiPopover props anchorPosition defaults to centerDown 1`] = `
<div
  class="euiPopover emotion-euiPopover-inline-block"
  id="5"
>
  <button />
</div>
`;

exports[`EuiPopover props anchorPosition downRight is rendered 1`] = `
<div
  class="euiPopover emotion-euiPopover-inline-block"
  id="7"
>
  <button />
</div>
`;

exports[`EuiPopover props anchorPosition leftCenter is rendered 1`] = `
<div
  class="euiPopover emotion-euiPopover-inline-block"
  id="6"
>
  <button />
</div>
`;

exports[`EuiPopover props arrowChildren is rendered 1`] = `
<div>
  <div
    class="euiPopover euiPopover-isOpen emotion-euiPopover-inline-block"
    id="19"
  >
    <button />
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="-1"
    />
    <div
      data-focus-lock-disabled="disabled"
    >
      <div
        aria-describedby="generated-id"
        aria-live="off"
        aria-modal="true"
        class="euiPanel euiPanel--plain euiPanel--paddingMedium euiPopover__panel emotion-euiPanel-grow-m-m-plain-euiPopover__panel-light-isOpen-hasTransform-bottom"
        data-autofocus="true"
        data-popover-open="true"
        data-popover-panel="true"
        role="dialog"
        style="top: 12px; left: 0px; will-change: transform, opacity; z-index: 2000;"
        tabindex="0"
      >
        <p
          class="emotion-euiScreenReaderOnly"
          id="generated-id"
        >
          You are in a dialog. Press Escape, or tap/click outside the dialog to close.
        </p>
        <div />
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="-1"
    />
  </div>
</div>
`;

exports[`EuiPopover props buffer 1`] = `
<div>
  <div
    class="euiPopover euiPopover-isOpen emotion-euiPopover-inline-block"
    id="20"
  >
    <button />
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="-1"
    />
    <div
      data-focus-lock-disabled="disabled"
    >
      <div
        aria-describedby="generated-id"
        aria-live="off"
        aria-modal="true"
        class="euiPanel euiPanel--plain euiPanel--paddingMedium euiPopover__panel emotion-euiPanel-grow-m-m-plain-euiPopover__panel-light-isOpen-hasTransform-bottom"
        data-autofocus="true"
        data-popover-open="true"
        data-popover-panel="true"
        role="dialog"
        style="top: 12px; left: 0px; will-change: transform, opacity; z-index: 2000;"
        tabindex="0"
      >
        <p
          class="emotion-euiScreenReaderOnly"
          id="generated-id"
        >
          You are in a dialog. Press Escape, or tap/click outside the dialog to close.
        </p>
        <div />
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="-1"
    />
  </div>
</div>
`;

exports[`EuiPopover props buffer for all sides 1`] = `
<div>
  <div
    class="euiPopover euiPopover-isOpen emotion-euiPopover-inline-block"
    id="21"
  >
    <button />
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="-1"
    />
    <div
      data-focus-lock-disabled="disabled"
    >
      <div
        aria-describedby="generated-id"
        aria-live="off"
        aria-modal="true"
        class="euiPanel euiPanel--plain euiPanel--paddingMedium euiPopover__panel emotion-euiPanel-grow-m-m-plain-euiPopover__panel-light-isOpen-hasTransform-bottom"
        data-autofocus="true"
        data-popover-open="true"
        data-popover-panel="true"
        role="dialog"
        style="top: 12px; left: 0px; will-change: transform, opacity; z-index: 2000;"
        tabindex="0"
      >
        <p
          class="emotion-euiScreenReaderOnly"
          id="generated-id"
        >
          You are in a dialog. Press Escape, or tap/click outside the dialog to close.
        </p>
        <div />
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="-1"
    />
  </div>
</div>
`;

exports[`EuiPopover props display block is rendered 1`] = `
<div
  class="euiPopover emotion-euiPopover-block"
  id="2"
>
  <button />
</div>
`;

exports[`EuiPopover props focusTrapProps is rendered 1`] = `
<div>
  <div
    class="euiPopover euiPopover-isOpen emotion-euiPopover-inline-block"
    id="15"
  >
    <button />
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="-1"
    />
    <div
      data-focus-lock-disabled="disabled"
    >
      <div
        aria-describedby="generated-id"
        aria-live="off"
        aria-modal="true"
        class="euiPanel euiPanel--plain euiPanel--paddingMedium euiPopover__panel emotion-euiPanel-grow-m-m-plain-euiPopover__panel-light-isOpen-hasTransform-bottom"
        data-autofocus="true"
        data-popover-open="true"
        data-popover-panel="true"
        role="dialog"
        style="top: 12px; left: 0px; will-change: transform, opacity; z-index: 2000;"
        tabindex="0"
      >
        <p
          class="emotion-euiScreenReaderOnly"
          id="generated-id"
        >
          You are in a dialog. Press Escape, or tap/click outside the dialog to close.
        </p>
        <div />
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="-1"
    />
  </div>
</div>
`;

exports[`EuiPopover props isOpen defaults to false 1`] = `
<div
  class="euiPopover emotion-euiPopover-inline-block"
  id="8"
>
  <button />
</div>
`;

exports[`EuiPopover props isOpen renders true 1`] = `
<div>
  <div
    class="euiPopover euiPopover-isOpen emotion-euiPopover-inline-block"
    id="9"
  >
    <button />
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="-1"
    />
    <div
      data-focus-lock-disabled="disabled"
    >
      <div
        aria-describedby="generated-id"
        aria-live="off"
        aria-modal="true"
        class="euiPanel euiPanel--plain euiPanel--paddingMedium euiPopover__panel emotion-euiPanel-grow-m-m-plain-euiPopover__panel-light-isOpen-hasTransform-bottom"
        data-autofocus="true"
        data-popover-open="true"
        data-popover-panel="true"
        role="dialog"
        style="top: 12px; left: 0px; will-change: transform, opacity; z-index: 2000;"
        tabindex="0"
      >
        <p
          class="emotion-euiScreenReaderOnly"
          id="generated-id"
        >
          You are in a dialog. Press Escape, or tap/click outside the dialog to close.
        </p>
        <div />
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="-1"
    />
  </div>
</div>
`;

exports[`EuiPopover props ownFocus defaults to true 1`] = `
<div>
  <div
    class="euiPopover euiPopover-isOpen emotion-euiPopover-inline-block"
    id="10"
  >
    <button />
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="-1"
    />
    <div
      data-focus-lock-disabled="disabled"
    >
      <div
        aria-describedby="generated-id"
        aria-live="off"
        aria-modal="true"
        class="euiPanel euiPanel--plain euiPanel--paddingMedium euiPopover__panel emotion-euiPanel-grow-m-m-plain-euiPopover__panel-light-isOpen-hasTransform-bottom"
        data-autofocus="true"
        data-popover-open="true"
        data-popover-panel="true"
        role="dialog"
        style="top: 12px; left: 0px; will-change: transform, opacity; z-index: 2000;"
        tabindex="0"
      >
        <p
          class="emotion-euiScreenReaderOnly"
          id="generated-id"
        >
          You are in a dialog. Press Escape, or tap/click outside the dialog to close.
        </p>
        <div />
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="-1"
    />
  </div>
</div>
`;

exports[`EuiPopover props ownFocus renders false 1`] = `
<div>
  <div
    class="euiPopover euiPopover-isOpen emotion-euiPopover-inline-block"
    id="11"
  >
    <button />
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="-1"
    />
    <div
      data-focus-lock-disabled="disabled"
    >
      <div
        aria-live="assertive"
        aria-modal="true"
        class="euiPanel euiPanel--plain euiPanel--paddingMedium euiPopover__panel emotion-euiPanel-grow-m-m-plain-euiPopover__panel-light-isOpen-hasTransform-bottom"
        data-popover-open="true"
        data-popover-panel="true"
        role="dialog"
        style="top: 12px; left: 0px; will-change: transform, opacity; z-index: 2000;"
      >
        <div />
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="-1"
    />
  </div>
</div>
`;

exports[`EuiPopover props panelClassName is rendered 1`] = `
<div>
  <div
    class="euiPopover euiPopover-isOpen emotion-euiPopover-inline-block"
    id="12"
  >
    <button />
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="-1"
    />
    <div
      data-focus-lock-disabled="disabled"
    >
      <div
        aria-describedby="generated-id"
        aria-live="off"
        aria-modal="true"
        class="euiPanel euiPanel--plain euiPanel--paddingMedium euiPopover__panel test emotion-euiPanel-grow-m-m-plain-euiPopover__panel-light-isOpen-hasTransform-bottom"
        data-autofocus="true"
        data-popover-open="true"
        data-popover-panel="true"
        role="dialog"
        style="top: 12px; left: 0px; will-change: transform, opacity; z-index: 2000;"
        tabindex="0"
      >
        <p
          class="emotion-euiScreenReaderOnly"
          id="generated-id"
        >
          You are in a dialog. Press Escape, or tap/click outside the dialog to close.
        </p>
        <div />
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="-1"
    />
  </div>
</div>
`;

exports[`EuiPopover props panelPaddingSize is rendered 1`] = `
<div>
  <div
    class="euiPopover euiPopover-isOpen emotion-euiPopover-inline-block"
    id="13"
  >
    <button />
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="-1"
    />
    <div
      data-focus-lock-disabled="disabled"
    >
      <div
        aria-describedby="generated-id"
        aria-live="off"
        aria-modal="true"
        class="euiPanel euiPanel--plain euiPanel--paddingSmall euiPopover__panel emotion-euiPanel-grow-m-s-plain-euiPopover__panel-light-isOpen-hasTransform-bottom"
        data-autofocus="true"
        data-popover-open="true"
        data-popover-panel="true"
        role="dialog"
        style="top: 12px; left: 0px; will-change: transform, opacity; z-index: 2000;"
        tabindex="0"
      >
        <p
          class="emotion-euiScreenReaderOnly"
          id="generated-id"
        >
          You are in a dialog. Press Escape, or tap/click outside the dialog to close.
        </p>
        <div />
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="-1"
    />
  </div>
</div>
`;

exports[`EuiPopover props panelProps is rendered 1`] = `
<div>
  <div
    class="euiPopover euiPopover-isOpen emotion-euiPopover-inline-block"
    id="14"
  >
    <button />
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="-1"
    />
    <div
      data-focus-lock-disabled="disabled"
    >
      <div
        aria-describedby="generated-id"
        aria-live="off"
        aria-modal="true"
        class="euiPanel euiPanel--plain euiPanel--paddingMedium euiPopover__panel testClass1 testClass2 emotion-euiPanel-grow-m-m-plain-euiPopover__panel-light-isOpen-hasTransform-bottom-euiTestCss"
        data-autofocus="true"
        data-popover-open="true"
        data-popover-panel="true"
        data-test-subj="test subject string"
        role="dialog"
        style="top: 12px; left: 0px; will-change: transform, opacity; z-index: 2000;"
        tabindex="0"
      >
        <p
          class="emotion-euiScreenReaderOnly"
          id="generated-id"
        >
          You are in a dialog. Press Escape, or tap/click outside the dialog to close.
        </p>
        <div />
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="-1"
    />
  </div>
</div>
`;

exports[`EuiPopover props popoverScreenReaderText 1`] = `
<div>
  <div
    class="euiPopover euiPopover-isOpen emotion-euiPopover-inline-block"
    id="22"
  >
    <button />
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="-1"
    />
    <div
      data-focus-lock-disabled="disabled"
    >
      <div
        aria-describedby="generated-id"
        aria-live="assertive"
        aria-modal="true"
        class="euiPanel euiPanel--plain euiPanel--paddingMedium euiPopover__panel emotion-euiPanel-grow-m-m-plain-euiPopover__panel-light-isOpen-hasTransform-bottom"
        data-popover-open="true"
        data-popover-panel="true"
        role="dialog"
        style="top: 12px; left: 0px; will-change: transform, opacity; z-index: 2000;"
      >
        <p
          class="emotion-euiScreenReaderOnly"
          id="generated-id"
        >
          Press the up/down arrow keys to navigate
        </p>
        <div />
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="-1"
    />
  </div>
</div>
`;
